button alignment fixed

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
 }
 
 .btn{
-    padding: 12px 28px;
+    padding: 15px 28px;
     background: linear-gradient(88.33deg, #FBA24F -7.64%, #FF1E1E 145.94%);
     border-radius: 100px;
     border: none;
